--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.dynamic-feature'
 
 dependencies {
     implementation project(':stripe')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-    implementation 'com.google.android.gms:play-services-wallet:16.0.1'
+    implementation 'com.google.android.gms:play-services-wallet:17.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     /* Needed for RxAndroid */
