--- a/stripe/AndroidManifest.xml
+++ b/stripe/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:dist="http://schemas.android.com/apk/distribution"
           package="com.stripe.android"
           android:versionCode="25"
           android:versionName="7.1.0"
-    >
+>
+
+    <dist:module dist:instant="false" dist:onDemand="false"
+                 dist:title="Stripe">
+        <dist:fusing dist:include="true" />
+    </dist:module>
 
     <application>
         <activity
