Update Stripe tests and dependencies

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.dynamic-feature'
+apply plugin: 'com.android.application'
 
 dependencies {
     implementation project(':stripe')
