--- a/stripe/AndroidManifest.xml
+++ b/stripe/AndroidManifest.xml
@@ -3,15 +3,21 @@
           xmlns:dist="http://schemas.android.com/apk/distribution"
           package="com.stripe.android"
           android:versionCode="25"
-          android:versionName="7.1.0"
->
+          android:versionName="7.1.0">
 
     <dist:module dist:instant="false" dist:onDemand="false"
                  dist:title="Stripe">
         <dist:fusing dist:include="true" />
     </dist:module>
 
-    <application>
+        <application>
+        <uses-library android:name="android.test.base"
+                android:required="false" />
+        <uses-library android:name="android.test.mock"
+                android:required="false" />
+        <uses-library android:name="android.test.runner"
+                android:required="false" />
+
         <activity
             android:name=".view.AddSourceActivity"
             android:theme="@style/StripeDefaultTheme"
