--- a/stripe/build.gradle
+++ b/stripe/build.gradle
@@ -12,59 +12,13 @@ configurations {
     javadocDeps
 }
 
-dependencies {
-    testImplementation 'com.google.auto.service:auto-service:1.0-rc4'
-
-    // Core library
-    androidTestImplementation "androidx.arch.core:core-testing:2.0.0"
-    androidTestImplementation "androidx.test:core:${rootProject.ext.androidxTestVersion}"
-
-    // AndroidJUnitRunner and JUnit Rules
-    testImplementation "junit:junit:${rootProject.ext.junitVersion}"
-
-    androidTestImplementation "androidx.test:runner:${rootProject.ext.androidxTestVersion}"
-    androidTestImplementation "androidx.test:rules:${rootProject.ext.androidxTestVersion}"
-
-    // Assertions
-    androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.androidxTestExtVersion}"
-    androidTestImplementation "androidx.test.ext:truth:${rootProject.ext.androidxTestExtVersion}"
-    androidTestImplementation "com.google.truth:truth:${rootProject.ext.googleTruthVersion}"
-
-    // Espresso dependencies
-    androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.ext.espressoVersion}"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:${rootProject.ext.espressoVersion}"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:${rootProject.ext.espressoVersion}"
-    androidTestImplementation "androidx.test.espresso:espresso-accessibility:${rootProject.ext.espressoVersion}"
-    androidTestImplementation "androidx.test.espresso:espresso-web:${rootProject.ext.espressoVersion}"
-    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:${rootProject.ext.espressoVersion}"
-    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
-
-    testImplementation "org.robolectric:robolectric:${rootProject.ext.robolectricVersion}"
-    testImplementation "org.mockito:mockito-core:${rootProject.ext.mockitoVersion}"
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
-    androidTestImplementation "org.mockito:mockito-android:${rootProject.ext.mockitoVersion}"
-    androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
-
-    implementation "androidx.annotation:annotation:1.1.0"
-    implementation "androidx.appcompat:appcompat:1.0.2"
-    // Api for this import because we use reflection to alter TextInputLayout
-    api "com.google.android.material:material:1.0.0"
-
-    javadocDeps "androidx.annotation:annotation:1.1.0"
-    javadocDeps "androidx.appcompat:appcompat:1.0.2"
-    javadocDeps "com.google.android.material:material:1.0.0"
-    compileOnly "javax.annotation:jsr250-api:${rootProject.ext.javaAnnotationVersion}"
-
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-}
-
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
     javaCompileOptions.annotationProcessorOptions.includeCompileClasspath = true
-        minSdkVersion 21
-        targetSdkVersion rootProject.ext.compileSdkVersion
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         consumerProguardFiles 'proguard-rules.txt'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -109,6 +63,57 @@ android {
         prod {
             dimension "primary"
         }
+    }
+
+    dependencies {
+        testImplementation 'com.google.auto.service:auto-service:1.0-rc4'
+
+        // Core library
+        androidTestImplementation "androidx.arch.core:core-testing:2.0.1"
+        androidTestImplementation "androidx.test:core:${rootProject.ext.androidxTestVersion}"
+
+        implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+        kapt 'androidx.lifecycle:lifecycle-common-java8:2.1.0'
+        implementation 'androidx.arch.core:core-common:2.1.0'
+        implementation 'androidx.arch.core:core-runtime:2.1.0'
+        
+        // AndroidJUnitRunner and JUnit Rules
+        testImplementation "junit:junit:${rootProject.ext.junitVersion}"
+
+        androidTestImplementation "androidx.test:runner:${rootProject.ext.androidxTestVersion}"
+        androidTestImplementation "androidx.test:rules:${rootProject.ext.androidxTestVersion}"
+
+        // Assertions
+        androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.androidxTestExtVersion}"
+        androidTestImplementation "androidx.test.ext:truth:${rootProject.ext.androidxTestExtVersion}"
+        androidTestImplementation "com.google.truth:truth:${rootProject.ext.googleTruthVersion}"
+
+        // Espresso dependencies
+        androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.ext.espressoVersion}"
+        androidTestImplementation "androidx.test.espresso:espresso-contrib:${rootProject.ext.espressoVersion}"
+        androidTestImplementation "androidx.test.espresso:espresso-intents:${rootProject.ext.espressoVersion}"
+        androidTestImplementation "androidx.test.espresso:espresso-accessibility:${rootProject.ext.espressoVersion}"
+        androidTestImplementation "androidx.test.espresso:espresso-web:${rootProject.ext.espressoVersion}"
+        androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:${rootProject.ext.espressoVersion}"
+        androidTestImplementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
+
+        testImplementation "org.robolectric:robolectric:${rootProject.ext.robolectricVersion}"
+        testImplementation "org.mockito:mockito-core:${rootProject.ext.mockitoVersion}"
+        testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+        androidTestImplementation "org.mockito:mockito-android:${rootProject.ext.mockitoVersion}"
+        androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
+
+        implementation "androidx.annotation:annotation:1.1.0"
+        implementation "androidx.appcompat:appcompat:1.0.2"
+        // Api for this import because we use reflection to alter TextInputLayout
+        api "com.google.android.material:material:1.0.0"
+
+        javadocDeps "androidx.annotation:annotation:1.1.0"
+        javadocDeps "androidx.appcompat:appcompat:1.0.2"
+        javadocDeps "com.google.android.material:material:1.0.0"
+        compileOnly "javax.annotation:jsr250-api:${rootProject.ext.javaAnnotationVersion}"
+
+        implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     }
 }
 
