--- a/stripe/build.gradle
+++ b/stripe/build.gradle
@@ -105,7 +105,7 @@ android {
         implementation "androidx.annotation:annotation:1.1.0"
         implementation "androidx.appcompat:appcompat:1.0.2"
         // Api for this import because we use reflection to alter TextInputLayout
-        implementation "com.google.android.material:material:1.0.0"
+        api "com.google.android.material:material:1.0.0"
 
         javadocDeps "androidx.annotation:annotation:1.1.0"
         javadocDeps "androidx.appcompat:appcompat:1.0.2"
